syntax = "proto3";

message Customer {
    string first_name = 1;
    string last_name = 2;
    Address address = 3;
}

message Address {
    string address1 = 1;
    string address2 = 2;
    string city = 3;
    string state = 4;
    string zip_code = 5;
}

